# vllm-rust

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml  justfile
crates/core/: Cargo.toml  LICENSE-THIRD-PARTY  build.rs
crates/core/benches/: attention_bench.rs  awq_marlin_path_bench.rs  embed_forward_bench.rs  exl3_dispatch_overhead_bench.rs  exl3_gemm_bench.rs  flashinfer_decode_bench.rs  fused_activations_bench.rs  gemma4_hetero_kv_bench.rs  gguf_qmatmul_bench.rs  iq_dequant_bench.rs  kv_alloc_bench.rs  kv_cache_write_bench.rs  lm_head_matmul_bench.rs  marlin_tile_mma_path_bench.rs  moe_routing_bench.rs  paged_attention_bench.rs  quantization_bench.rs  quantized_layer_bench.rs  rms_norm_bench.rs  rotary_embedding_bench.rs  sampling_bench.rs  sampling_pipeline_bench.rs  scheduler_bench.rs
crates/core/kernels/: activations.cu  activations.ptx  apply_grammar_bitmask.cu  apply_grammar_bitmask.ptx  awq_gemv.cu  awq_gemv.ptx  awq_marlin_dequant.cu  awq_marlin_dequant.ptx  bnb_fused_matmul.cu  bnb_fused_matmul.ptx  cache_ops.cu  cache_ops.ptx  custom_allreduce.cu  custom_allreduce.ptx  fp8_gemm.cu  fp8_gemm.ptx  fp8_quant.cu  fp8_quant.ptx  fused_moe_align.cu  fused_moe_align.ptx  fused_moe_gemm.cu  fused_moe_gemm.ptx  gather_dequant.cu  gather_dequant.ptx  gptq_dequant.cu  gptq_dequant.ptx  iq_dequant.cu  iq_dequant.ptx  iq_tables.cuh  layernorm.cu  layernorm.ptx  layernorm_quant.cu  layernorm_quant.ptx  marlin_gemm.cu  marlin_gemm.ptx  marlin_tile_mma.cu  marlin_tile_mma.ptx  mxfp4_gemm.cu  mxfp4_gemm.ptx  paged_attention.cu  (+13 more)
crates/core/kernels/exl3/: coop_autotune.cuh  exl3_devctx.cu  exl3_devctx.cuh  exl3_gemm.cu  exl3_gemm.cuh  exl3_gemm_decode_kernel.cuh  exl3_gemm_inner.cuh  exl3_gemm_kernel.cuh  exl3_gemv.cu  exl3_gemv.cuh  exl3_gemv.ptx  exl3_gemv_kernel.cuh  exl3_kernel_map.cu  exl3_kernel_map.cuh  exl3_torch_stub.h  hadamard.cu  hadamard.cuh  hadamard.ptx  hadamard_inner.cuh  ptx.cuh  reconstruct.cu  reconstruct.cuh  reconstruct.ptx  util.cuh
crates/core/src/: config.rs  cuda_kernels.rs  encoder_cache.rs  engine.rs  lib.rs  loader.rs  request.rs  sampling.rs  scheduler.rs  tokenizer.rs
crates/core/src/distributed/: attention.rs  communicator.rs  context_parallel.rs  data_parallel.rs  error.rs  expert_parallel.rs  launcher.rs  mod.rs  nccl.rs  parallel_layers.rs  pipeline.rs  process_group.rs
crates/core/src/engine/: async_sampler.rs  context.rs  cr_trace.rs  cuda_graph.rs  cuda_graph_runner.rs  cuda_mem.rs  debug_dump.rs  embedding_forward.rs  encoder_decoder.rs  engine_limits.rs  gemma4_mtp.rs  handle.rs  helpers.rs  layer_dump.rs  mod.rs  model_forward.rs  output_pool.rs  pipeline.rs  speculative.rs  standard.rs  strategy.rs  tensor_parallel.rs  types.rs  warmup.rs
crates/core/src/kv_cache/: block_metrics.rs  block_pool.rs  block_table.rs  cache_engine.rs  config.rs  error.rs  free_block_queue.rs  metrics.rs  mla_cache_config.rs  mla_cache_engine.rs  mod.rs  offload.rs  offload_metrics.rs  prefix_cache.rs  prefix_cache_stats.rs  quantization.rs
crates/core/src/layers/: alibi.rs  attention.rs  cross_attention.rs  mask.rs  mlp.rs  mod.rs  normalization.rs  rotary.rs
crates/core/src/lora/: context.rs  linear.rs  loader.rs  manager.rs  mod.rs  types.rs
crates/core/src/model/: attention.rs  mlp.rs  mod.rs
crates/core/src/models/: afmoe.rs  apertus.rs  apertus_quantized.rs  arcee.rs  arctic.rs  aria.rs  audioflamingo3.rs  aya_vision.rs  bagel.rs  baichuan.rs  bailing_moe.rs  bamba.rs  bert.rs  bert_splade.rs  bge_reranker.rs  blip2.rs  bloom.rs  bloom_quantized.rs  chameleon.rs  chatglm.rs  chatglm_quantized.rs  clip.rs  cohere.rs  cohere_quantized.rs  colbert.rs  dbrx.rs  deepseek.rs  deepseek_lora.rs  deepseek_mtp.rs  deepseek_ocr.rs  deepseek_ocr2.rs  deepseek_quantized.rs  deepseek_vl2.rs  dots1.rs  dots_ocr.rs  e5_mistral.rs  eagle2_5_vl.rs  eagle3.rs  eagle3_mistral_large3.rs  eagle_deepseek.rs  (+219 more)
crates/core/src/moe/: ep_layer.rs  eplb.rs  eplb_execute.rs  expert_layer.rs  expert_map.rs  lora.rs  mod.rs  quantized_experts.rs  router.rs  token_dispatch.rs  topk_softmax.rs  tp_layer.rs
crates/core/src/multimodal/: audio.rs  gemma4_image.rs  inputs.rs  mel_spectrogram.rs  mod.rs  preprocessor_cache.rs  processor.rs  projector.rs  video.rs  vision.rs
crates/core/src/perf_estimate/: gpu_profile.rs  mod.rs  model_profile.rs  roofline.rs  vram_fitness.rs
crates/core/src/prompt_adapter/: loader.rs  manager.rs  mod.rs  types.rs
crates/core/src/quantization/: awq.rs  awq_marlin.rs  bitsandbytes.rs  bnb_cuda.rs  compressed_tensors.rs  config.rs  cpu_wna16.rs  detection.rs  exl3.rs  exl3_cuda.rs  exl3_scratch.rs  experts_int8.rs  fbgemm_fp8.rs  fp8.rs  fp8_cuda.rs  fp_quant.rs  gguf_cuda.rs  gptq.rs  gptq_cuda.rs  inc.rs  kv_cache_scales.rs  marlin.rs  marlin_cuda.rs  marlin_tile_cuda.rs  mod.rs  modelopt.rs  moe_wna16.rs  mxfp4.rs  mxfp4_cuda.rs  mxfp8.rs  ptpc_fp8.rs  quark.rs  torchao.rs  weight_loader.rs
crates/core/src/reasoning/: mod.rs
crates/core/src/sampling/: beam.rs  constraint.rs  gpu.rs  logits_processor.rs  mod.rs
crates/core/src/ssm/: causal_conv1d.rs  gated_layer_norm.rs  mod.rs  selective_scan.rs  ssd.rs  ssd_cuda.rs  state.rs
crates/core/src/testing/: mock_model.rs  mod.rs  tiny_config.rs
crates/core/src/tool_parser/: deepseek_v3.rs  deepseek_v31.rs  deepseek_v32.rs  ernie45.rs  functiongemma.rs  gemma4.rs  gigachat3.rs  glm4.rs  granite.rs  hermes.rs  hunyuan.rs  internlm2.rs  jamba.rs  json_parser.rs  kimi_k2.rs  llama.rs  llama4_pythonic.rs  longcat.rs  minimax.rs  minimax_m2.rs  mistral.rs  mod.rs  olmo3.rs  phi4mini.rs  pythonic.rs  qwen3coder.rs  seed_oss.rs  step3.rs  xlam.rs
crates/core/tests/: no_local_attention.rs  no_local_vision_tower.rs  registry_completeness.rs
crates/server/: Cargo.toml
crates/server/src/: config.rs  distributed_launcher.rs  lib.rs  logging.rs  main.rs  shutdown.rs
crates/server/src/api/: anthropic.rs  audio.rs  batch.rs  chat.rs  completions.rs  embeddings.rs  error.rs  (+11 more)
crates/server/tests/: grammar_strictness_e2e.rs
(+437 files in other folders)
