[package]
name = "vllm-rust-tests"
version = "0.0.0"
edition = "2021"
publish = false

[workspace]
members = ["crates/*"]
resolver = "2"

[dev-dependencies]
vllm-core = { path = "crates/core", features = ["test-utils"] }
vllm-server = { path = "crates/server" }
tokio = { version = "1", features = ["full"] }
candle-core = { version = "0.9", features = ["cuda"] }
candle-nn = { version = "0.9", features = ["cuda"] }
serde = { workspace = true }
serde_json = "1"
tempfile = "3"

[workspace.package]
edition = "2021"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
thiserror = "2"
anyhow = "1"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
candle-core = { version = "0.9", features = ["cuda"] }
candle-nn = { version = "0.9", features = ["cuda"] }
candle-flash-attn = "0.9"
hf-hub = "0.4"
tokenizers = "0.22"
ahash = "0.8"
axum = { version = "0.8", features = ["json"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tokio-stream = "0.1"
futures = "0.3"
uuid = { version = "1", features = ["v4"] }
half = "2.5"
minijinja = "2"
minijinja-contrib = { version = "2", features = ["pycompat"] }
clap = { version = "4", features = ["derive"] }
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
libloading = "0.8"
regex = "1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
base64 = "0.22"
symphonia = { version = "0.5", default-features = false, features = ["wav", "mp3", "isomp4", "aac"] }

[[test]]
name = "reference_comparison"
path = "tests/correctness/reference_comparison.rs"

[[test]]
name = "concurrent_requests"
path = "tests/stress/concurrent_requests.rs"
