[package]
name = "vllm-rust-tests"
version = "0.0.0"
edition = "2021"
publish = false

[workspace]
members = ["crates/*"]
exclude = ["vendor"]
resolver = "2"

# Top-level convenience feature so `cargo clippy --all-targets --features cuda`
# (the pre-commit hook) keeps working with the patched candle. Activates the
# CUDA feature on each workspace member; candle's `cuda` feature comes
# transitively through them — referencing `candle-core/cuda` directly here
# would conflict with `[patch.crates-io]` ("cannot specify features for
# packages outside of workspace").
[features]
cuda = ["vllm-core/cuda", "vllm-server/cuda"]

[dev-dependencies]
vllm-core = { path = "crates/core", features = ["test-utils"] }
vllm-server = { path = "crates/server" }
tokio = { version = "1", features = ["full"] }
candle-core = "0.9"
candle-nn = "0.9"
serde = { workspace = true }
serde_json = "1"
tempfile = "3"

[workspace.package]
edition = "2021"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
thiserror = "2"
anyhow = "1"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
candle-core = "0.9"
candle-nn = "0.9"
candle-flash-attn = "0.9"
hf-hub = "0.4"
tokenizers = "0.22"
ahash = "0.8"
axum = { version = "0.8", features = ["json", "multipart", "ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tokio-stream = "0.1"
futures = "0.3"
uuid = { version = "1", features = ["v4"] }
half = "2.5"
minijinja = "2"
minijinja-contrib = { version = "2", features = ["pycompat"] }
clap = { version = "4", features = ["derive", "env"] }
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
libloading = "0.8"
regex = "1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
base64 = "0.22"
symphonia = { version = "0.5", default-features = false, features = ["wav", "pcm", "mp3", "isomp4", "aac"] }
phf = { version = "0.11", features = ["macros"] }
bitflags = "2"

# Use the vendored candle fork (vendor/candle) instead of the crates.io
# release. The fork carries one delta on top of the v0.9.1 tag — switching
# `CudaDevice::new` from `default_stream()` to `new_stream()` so cudarc
# reports a non-NULL CUstream to the rest of the engine. CUDA Graph capture
# (`cuStreamBeginCapture_v2`) is unconditionally unsupported on the legacy
# null stream; without this patch the capture path returns error 900 and
# falls back to eager. Every other candle subcrate we touch (candle-nn,
# candle-flash-attn) re-exports candle-core internally — patching just
# `candle-core` is enough to redirect the whole stack to the fork.
[patch.crates-io]
candle-core = { path = "vendor/candle/candle-core" }
candle-nn = { path = "vendor/candle/candle-nn" }
candle-flash-attn = { path = "vendor/candle/candle-flash-attn" }

[[test]]
name = "reference_comparison"
path = "tests/correctness/reference_comparison.rs"

[[test]]
name = "concurrent_requests"
path = "tests/stress/concurrent_requests.rs"
