[package]
name = "vllm-rust-tests"
version = "0.0.0"
edition = "2021"
publish = false

[workspace]
members = ["crates/*"]
resolver = "2"

# The FFI sibling crates (xgrammar-rs, flashinfer-rs) are pulled from
# GitHub so the project builds standalone. To develop against a local
# checkout, uncomment the matching [patch] block (do not commit it):
#
# [patch."https://github.com/vasia123/xgrammar-rs"]
# xgrammar-rs = { path = "../xgrammar-rs" }
#
# [patch."https://github.com/vasia123/flashinfer-rs"]
# flashinfer-rs = { path = "../flashinfer-rs" }

# Top-level convenience feature so `cargo clippy --all-targets --features cuda`
# (the pre-commit hook) keeps working with the patched candle. Activates the
# CUDA feature on each workspace member; candle's `cuda` feature comes
# transitively through them — referencing `candle-core/cuda` directly here
# would conflict with `[patch.crates-io]` ("cannot specify features for
# packages outside of workspace").
[features]
cuda = ["vllm-core/cuda", "vllm-server/cuda"]

[dev-dependencies]
vllm-core = { path = "crates/core", features = ["test-utils"] }
vllm-server = { path = "crates/server" }
tokio = { version = "1", features = ["full"] }
candle-core = "0.10"
candle-nn = "0.10"
serde = { workspace = true }
serde_json = "1"
tempfile = "3"

[workspace.package]
edition = "2021"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
thiserror = "2"
anyhow = "1"
serde = { version = "1", features = ["derive", "rc"] }
# `preserve_order` keeps the declared property order in
# `serde_json::Map`, which matters for `schema_to_ebnf`: we emit
# object properties in JSON-Schema source order so the model's
# output mirrors how the schema author laid them out instead of
# being alphabetically reshuffled by a BTreeMap.
serde_json = { version = "1", features = ["preserve_order"] }
candle-core = "0.10"
candle-nn = "0.10"
candle-flash-attn = "0.10"
hf-hub = "0.4"
tokenizers = "0.22"
ahash = "0.8"
axum = { version = "0.8", features = ["json", "multipart", "ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tokio-stream = "0.1"
futures = "0.3"
uuid = { version = "1", features = ["v4"] }
half = "2.5"
minijinja = "2"
minijinja-contrib = { version = "2", features = ["pycompat"] }
clap = { version = "4", features = ["derive", "env"] }
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
libloading = "0.8"
regex = "1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
base64 = "0.22"
symphonia = { version = "0.5", default-features = false, features = ["wav", "pcm", "mp3", "isomp4", "aac"] }
phf = { version = "0.11", features = ["macros"] }
bitflags = "2"

# candle 0.10.2 from crates.io. The vendor/candle fork was retired by
# Stage 13-H follow-up (2026-05-08): the original 13-H "45 % perf drop"
# under candle 0.10 turned out to be a measurement artefact (GPU clocks
# fell to ~74 % of max under bench_decode --runs 1 on a cold device).
# Re-benched with --runs 3 sustained load: candle 0.10.2 vanilla matches
# the patched 0.9.1 fork to within 1 % across c=1/4/8. The previous
# non-default-stream patch was needed only for CUDA Graph capture, which
# is independently blocked by cudarc 0.16 V3 (see memory note
# `perf_cuda_graph_capture.md`), so dropping the patch costs nothing.

[[test]]
name = "reference_comparison"
path = "tests/correctness/reference_comparison.rs"

[[test]]
name = "concurrent_requests"
path = "tests/stress/concurrent_requests.rs"
