[package]
name = "vllm-core"
version = "0.1.0"
edition.workspace = true

[features]
default = ["model-registry-v2"]
test-utils = []
cuda = ["candle-core/cuda", "candle-nn/cuda"]
flash-attn = ["dep:candle-flash-attn"]
flashinfer = ["dep:flashinfer-rs", "flashinfer-rs/cuda", "cuda"]
cuda-kernels = ["cuda"]
cuda-fused-activations = ["cuda-kernels"]
cuda-layernorm = ["cuda-kernels"]
cuda-moe = ["cuda-kernels"]
marlin = ["cuda-kernels"]
# Aggregate gate for the CUDA-graph mini-decoder bisect tests in
# `crates/core/src/cuda_kernels.rs::tests::*`. Those tests call
# `rms_norm_cuda_pooled` / `embedding_pooled` /
# `bf16_add_pooled` / `silu_and_mul_separate_pooled`, which live
# behind the layernorm + fused-activations sub-features. Without
# this gate the test build was failing whenever `cuda-kernels`
# was enabled but the sub-features were not — a pre-existing
# breakage that masked every test in the `vllm-core` lib test
# binary. The tests themselves are `#[ignore]`-d (they require a
# real GPU + capture support); the gate only guards compilation.
mini-decoder-tests = ["cuda-kernels", "cuda-layernorm", "cuda-fused-activations"]
# Aggregate feature describing the *intended* production GPU build set.
# When all listed features compile cleanly, pulling this in turns on every
# kernel-level optimisation in vllm-core (Marlin INT4, fused norms, fused
# activations, MoE kernels, FlashInfer attention).  AWQ checkpoints route
# through Marlin; RMSNorm/RoPE through fused CUDA; attention through
# FlashInfer paged kernels.
#
# NOTE (2026-05): `marlin`, `flashinfer`, `cuda-layernorm`,
# `cuda-fused-activations`, and `cuda-moe` currently fail to build against
# the bumped cudarc / candle stack (LaunchArgs::arg API change and FFI
# guard-lifetime issues).  Until those are repaired, recommend building
# with just `cuda-kernels` — the AWQ fast path still routes through
# `gptq_cuda::gptq_gemm` (which only requires `cuda-kernels`) and gives
# a large speed-up over `AwqLinear`'s CPU dequant.
cuda-default = [
    "cuda-kernels",
    "cuda-layernorm",
    "cuda-fused-activations",
    "cuda-moe",
    "marlin",
    "flashinfer",
]
image-loading = ["dep:image", "dep:base64"]
audio = ["dep:symphonia"]
# Phase 1 of the architecture refactor (registry-based dispatch). Off by
# default until Phase 2 ships and the registry is populated; legacy
# match-arm dispatch remains the live path until then.
model-registry-v2 = ["dep:phf"]

# Test tiers based on GPU memory requirements
gpu-test-small = []      # Tests requiring < 2GB VRAM
gpu-test-medium = ["gpu-test-small"]  # Tests requiring < 6GB VRAM
gpu-test-large = ["gpu-test-medium"]  # Tests requiring > 6GB VRAM
multi-gpu-test = ["gpu-test-large"]   # Tests requiring multiple GPUs

[dependencies]
tokio.workspace = true
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
candle-core.workspace = true
candle-nn.workspace = true
hf-hub.workspace = true
tokenizers.workspace = true
minijinja.workspace = true
minijinja-contrib.workspace = true
ahash.workspace = true
candle-flash-attn = { workspace = true, optional = true }
flashinfer-rs = { git = "https://github.com/vasia123/flashinfer-rs", optional = true }
image = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }
symphonia = { workspace = true, optional = true }
phf = { workspace = true, optional = true }
bitflags = { workspace = true }
half.workspace = true
rand.workspace = true
libloading.workspace = true
tracing.workspace = true
regex.workspace = true
regex-automata = "0.4"
nom = "7"
uuid.workspace = true
sha2 = "0.10"
libm = "0.2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "sampling_bench"
harness = false

[[bench]]
name = "attention_bench"
harness = false

[[bench]]
name = "quantization_bench"
harness = false

[[bench]]
name = "moe_routing_bench"
harness = false

[[bench]]
name = "paged_attention_bench"
harness = false
required-features = ["cuda-kernels"]

[[bench]]
name = "scheduler_bench"
harness = false

[[bench]]
name = "kv_alloc_bench"
harness = false

[[bench]]
name = "sampling_pipeline_bench"
harness = false

[[bench]]
name = "awq_marlin_path_bench"
harness = false
required-features = ["cuda-kernels", "marlin"]

[[bench]]
name = "marlin_tile_mma_path_bench"
harness = false
required-features = ["cuda-kernels", "marlin"]

[[bench]]
name = "lm_head_matmul_bench"
harness = false
required-features = ["cuda"]

[[bench]]
name = "flashinfer_decode_bench"
harness = false
required-features = ["cuda-kernels", "flashinfer"]
