[package]
name = "vllm-core"
version.workspace = true
edition.workspace = true

[features]
default = ["model-registry-v2"]
test-utils = []
cuda = ["candle-core/cuda", "candle-nn/cuda"]
flash-attn = ["dep:candle-flash-attn"]
flashinfer = ["dep:flashinfer-rs", "flashinfer-rs/cuda", "cuda"]
cuda-kernels = ["cuda"]
cuda-fused-activations = ["cuda-kernels"]
cuda-layernorm = ["cuda-kernels"]
cuda-moe = ["cuda-kernels"]
marlin = ["cuda-kernels"]
# Aggregate gate for the CUDA-graph mini-decoder bisect tests in
# `crates/core/src/cuda_kernels.rs::tests::*`. Those tests call
# `rms_norm_cuda_pooled` / `embedding_pooled` /
# `half_add_pooled` / `silu_and_mul_separate_pooled`, which live
# behind the layernorm + fused-activations sub-features. Without
# this gate the test build was failing whenever `cuda-kernels`
# was enabled but the sub-features were not — a pre-existing
# breakage that masked every test in the `vllm-core` lib test
# binary. The tests themselves are `#[ignore]`-d (they require a
# real GPU + capture support); the gate only guards compilation.
mini-decoder-tests = ["cuda-kernels", "cuda-layernorm", "cuda-fused-activations"]
# Aggregate feature describing the *intended* production GPU build set.
# Pulls in every kernel-level optimisation in vllm-core (Marlin INT4,
# fused norms, fused activations, MoE kernels, FlashInfer attention).
# AWQ checkpoints route through Marlin; RMSNorm/RoPE through fused
# CUDA; attention through FlashInfer paged kernels.
#
# Build prerequisites (CUDA 12.4+):
# - `marlin`, `cuda-layernorm`, `cuda-fused-activations`, `cuda-moe`,
#   `flashinfer` previously broke against the cudarc 0.16 LaunchArgs::arg
#   API change and CUDA 12.0's nvcc parser bug on long template
#   instantiations. Both issues are resolved on the current toolchain
#   (cudarc-bumped + CUDA 12.4): all five sub-features compile cleanly
#   under `cargo check --features cuda-default` as of 2026-05-15.
# - Release builds with this feature set need ~24 GiB swap on WSL2 due
#   to ptxas memory peaks on the FlashInfer template-heavy kernels;
#   see `.cargo/config.toml` (`jobs = 1`) and the WSL2 `.wslconfig`
#   notes.
cuda-default = [
    "cuda-kernels",
    "cuda-layernorm",
    "cuda-fused-activations",
    "cuda-moe",
    "marlin",
    "flashinfer",
]
image-loading = ["dep:image", "dep:base64"]
audio = ["dep:symphonia"]
# Route JSON-Schema / regex / EBNF structured-output compilation through
# the upstream xgrammar (mlc-ai/xgrammar) C++ library via our owned
# sibling `xgrammar-rs` FFI crate. Default-off; off-build keeps the
# native Rust port that only supports a subset of JSON Schema.
# When on, enforces `pattern`, `minLength`/`maxLength`, `minimum`/`maximum`,
# `additionalProperties:false`, etc. with parity to Python vLLM.
xgrammar = ["dep:xgrammar-rs"]
# Phase 1 of the architecture refactor (registry-based dispatch). Off by
# default until Phase 2 ships and the registry is populated; legacy
# match-arm dispatch remains the live path until then.
model-registry-v2 = ["dep:phf"]

# Test tiers based on GPU memory requirements
gpu-test-small = []      # Tests requiring < 2GB VRAM
gpu-test-medium = ["gpu-test-small"]  # Tests requiring < 6GB VRAM
gpu-test-large = ["gpu-test-medium"]  # Tests requiring > 6GB VRAM
multi-gpu-test = ["gpu-test-large"]   # Tests requiring multiple GPUs

[dependencies]
tokio.workspace = true
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
candle-core.workspace = true
candle-nn.workspace = true
hf-hub.workspace = true
tokenizers.workspace = true
minijinja.workspace = true
minijinja-contrib.workspace = true
ahash.workspace = true
candle-flash-attn = { workspace = true, optional = true }
flashinfer-rs = { git = "https://github.com/vasia123/flashinfer-rs", optional = true }
xgrammar-rs = { git = "https://github.com/vasia123/xgrammar-rs", optional = true }
image = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }
symphonia = { workspace = true, optional = true }
phf = { workspace = true, optional = true }
bitflags = { workspace = true }
half.workspace = true
rand.workspace = true
libloading.workspace = true
tracing.workspace = true
regex.workspace = true
regex-automata = "0.4"
nom = "7"
uuid.workspace = true
sha2 = "0.10"
libm = "0.2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "sampling_bench"
harness = false

[[bench]]
name = "attention_bench"
harness = false

[[bench]]
name = "gemma4_hetero_kv_bench"
harness = false

# Embedding forward path (forward_hidden) vs generation prefill (forward),
# for the quantized Gemma 4 + Qwen3 models that back /v1/embeddings.
[[bench]]
name = "embed_forward_bench"
harness = false

[[bench]]
name = "quantization_bench"
harness = false

# GGUF quantized linear: dense-dequant baseline vs candle fused QMatMul
# (MMVQ). CPU half always builds; CUDA half is `#[cfg(feature="cuda")]`.
[[bench]]
name = "gguf_qmatmul_bench"
harness = false

# Native I-quant (IQ) dequant + IqLinear forward baseline (no candle path).
# Records the BEFORE for the planned fused-MMVQ IQ kernel.
[[bench]]
name = "iq_dequant_bench"
harness = false

[[bench]]
name = "moe_routing_bench"
harness = false

[[bench]]
name = "paged_attention_bench"
harness = false
required-features = ["cuda-kernels"]

[[bench]]
name = "scheduler_bench"
harness = false

[[bench]]
name = "kv_alloc_bench"
harness = false

[[bench]]
name = "sampling_pipeline_bench"
harness = false

[[bench]]
name = "awq_marlin_path_bench"
harness = false
required-features = ["cuda-kernels", "marlin"]

[[bench]]
name = "marlin_tile_mma_path_bench"
harness = false
required-features = ["cuda-kernels", "marlin"]

[[bench]]
name = "lm_head_matmul_bench"
harness = false
required-features = ["cuda"]

[[bench]]
name = "flashinfer_decode_bench"
harness = false
required-features = ["cuda-kernels", "flashinfer"]

# Tier 1 per-kernel benches — see docs/perf/tiered-benches.md (planned)
# for the rationale. Each catches regressions at the kernel level
# (alloc strategy, dispatch predicate, pool slot stability) without
# requiring a full release server build.
[[bench]]
name = "fused_activations_bench"
harness = false
required-features = ["cuda-kernels", "cuda-fused-activations"]

[[bench]]
name = "rms_norm_bench"
harness = false
required-features = ["cuda-kernels", "cuda-layernorm"]

[[bench]]
name = "rotary_embedding_bench"
harness = false
required-features = ["cuda-kernels"]

# Tier 2.b — real Qwen3 decoder layer bench (loads turboderp/Qwen3-8B-exl3
# at setup). Catches regressions in quantised linear dispatch +
# layer-level kernel chain side-effects that Tier 1 micros cannot see.
# Only `cuda-kernels` is mandatory — the bench is intentionally
# runnable under any superset (cuda-kernels alone, +cuda-fused-activations,
# +cuda-default, …) so feature-bisect snapshot diffs can localise which
# sub-feature drives a regression.
[[bench]]
name = "quantized_layer_bench"
harness = false
required-features = ["cuda-kernels"]

# Tier 1 — KV cache scatter (`reshape_and_cache_cuda`). Called 36×c per
# token on Qwen3-8B; no prior bench coverage.
[[bench]]
name = "kv_cache_write_bench"
harness = false
required-features = ["cuda-kernels"]

# Tier 1 — `exl3_gemm` kernel microbench at decode shapes. Isolates the
# trellis-decode GEMM from `Exl3Linear::forward` trait wrapping so
# per-call regressions can be told apart from dispatch-side effects.
[[bench]]
name = "exl3_gemm_bench"
harness = false
required-features = ["cuda-kernels"]

# H2 probe for the marlin-feature EXL3 regression — pure trait-call
# overhead on a no-op `Box<dyn QuantizedLinear>` mock. CPU-runnable; no
# `required-features` so it can be compared with and without `marlin`
# under any superset.
[[bench]]
name = "exl3_dispatch_overhead_bench"
harness = false
