[package]
name = "vllm-server"
version = "0.1.0"
edition.workspace = true

[features]
cuda = ["vllm-core/cuda", "candle-core/cuda"]
cuda-kernels = ["cuda", "vllm-core/cuda-kernels"]
# Production GPU build: pulls in every kernel-level optimisation
# (Marlin, fused norms, fused activations, MoE kernels, FlashInfer).
# Recommended command for actual inference:
#   cargo run --release -p vllm-server --features cuda-full -- serve ...
cuda-full = ["cuda", "vllm-core/cuda-default"]

[dependencies]
vllm-core = { path = "../core", features = ["audio"] }
tokio.workspace = true
anyhow.workspace = true
candle-core.workspace = true
axum.workspace = true
tower-http.workspace = true
tokio-stream.workspace = true
uuid.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
futures.workspace = true
rust-embed = "8"
mime_guess = "2"
toml = "0.8"
dirs = "5"
base64.workspace = true
reqwest = { version = "0.12", features = ["json"] }
urlencoding = "2"
async-stream = "0.3"
async-trait = "0.1"
prometheus = "0.13"
once_cell = "1.19"
governor = "0.6"
axum-server = { version = "0.7", features = ["tls-rustls"] }
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["http-json", "reqwest-client"] }
opentelemetry-http = "0.27"
tracing-opentelemetry = "0.28"

[dev-dependencies]
vllm-core = { path = "../core", features = ["test-utils"] }
tower.workspace = true
tempfile = "3"
hound = "3"
